# abroad-payroll-api

./: .env  .gitignore  Cargo.toml  Dockerfile.dev  README.md  compose.yaml  db.env  legal_basis.md  screens.md  support.sql
migrations/up/: 000_setup.sql  001_create_people.sql  001_create_roles.sql  002_create_classes.sql  003_create_roles_classes_indexes.sql  004_create_banks.sql  005_create_cities.sql  005_create_countries.sql  006_create_cities.sql  006_create_people.sql  007_create_people.sql  007_create_roles_indexes.sql  008_create_dependents_types.sql  008_create_fc_rf_by_roles.sql  009_create_dependents.sql  009_create_fc_rf_by_city.sql  010_time_served_abroad.sql  011_create_fc_rf_by_roles.sql  012_create_fc_rf_by_city.sql  013_create_cf_limit_exchange_rate.sql  013_payroll.sql  014_create_cf_limit_value.sql  015_create_rf_payment_receipts.sql  015_rf_payment_receipts.sql  016_create_meta_payroll_items.sql  016_meta_payroll_items.sql  017_payroll_simulation.sql  018_payroll_closed.sql  019_paid_rf_receipts.sql  019_simulation_paid_rf_receipts.sql  020_manual entries.sql  021_manual_entries.sql  021_vacation_periods.sql  022_progressive_income_tax_table.sql  024_people_open_fields.sql  030_payroll.sql  030_payroll_simulation.sql  031_payroll_closed.sql  031_payroll_simulation_closed.sql  099_initial_seed.sql
src/: app.rs  main.rs  response.rs
src/handlers/: banks.rs  cities.rs  classes.rs  countries.rs  mod.rs  roles.rs  roles_classes_indexes.rs  test.rs
src/middlewares/: check_etag.rs  mod.rs
src/routes/: banks.rs  cf_limit_exchange_rate.rs  cities.rs  (+19 more)
(+157 files in other folders)
