[package]
name = "abroad-payroll-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "migrate",
    "uuid",
    "macros",
] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }

